fixtures/frontend/milestone-2/invalid/operator-expression-typing/main.aivi
value brokenAnd: Bool     = 1 and True
value brokenCompare: Bool = [1] < [2]
value brokenNot: Bool     = not None
value brokenAdd: Int      = 1 + True
value brokenEq: Bool      = 1 != "1"
